# Trustee

./: .gitignore  README.md  design_choices.txt  dune-project  makefile  setup.sh
lib/: dune  eval_ops.ml  exceptions.ml  interpreter.ml  lexer.mll  native_functions.ml  parser.mly  syntax.ml  type_system.ml  utils.ml
test/: accessTb  anon_fact  another_example  assert  block_as_args  dune  ex  ex1  ex2  exec  fact.F3  filter  fn_comparison  if_blocks  include  list  list_comparison  list_comparison.F3  list_equality  list_equality.F3  omonimo  parsePlugin  parseTrust  plugin_as_parameter  plugin_highorder  plugin_of_plugin  proj_of_plugin  taint  test_IO.ml  test_access.ml  test_accessTb.ml  test_aliasing.ml  test_anon.ml  test_anon_fact.ml  test_anon_from_tuple.ml  test_assert.ml  test_concat.ml  test_cons.ml  test_currying.ml  test_different_secret_level.ml  (+42 more)
test/manual_test/: test_empty_handle.ml  test_filter.ml  test_include.ml  test_input.ml  test_syntax_errors.ml
test/plugin/: filter  p  succ  trust
